--- a/register.html
+++ b/register.html
@@ -25,11 +25,9 @@
                     <div class="user-type-title">Register as:</div>
                     <div class="user-type-options">
                         <div class="user-type-option active" data-type="driver">
-                            <div class="user-type-icon">🚗</div>
                             <div class="user-type-label">Driver</div>
                         </div>
                         <div class="user-type-option" data-type="owner">
-                            <div class="user-type-icon">🏢</div>
                             <div class="user-type-label">Parking Owner</div>
                         </div>
                     </div>
@@ -64,7 +62,7 @@
                 </div>
                 
                 <div class="auth-links">
-                    <a href="login.html">Already have an account? Sign In</a>
+                    <a href="index.html">Already have an account? Sign In</a>
                 </div>
             </div>
         </div>
