--- a/register.html
+++ b/register.html
@@ -14,7 +14,7 @@
                     <span>9:41</span>
                     <span>100%</span>
                 </div>
-                <button class="back-btn" onclick="window.location.href='login.html'">←</button>
+                <button class="back-btn" onclick="window.location.href='index.html'">←</button>
                 <h1>Create Account</h1>
                 <p>Join ParkEase Community</p>
             </div>
