--- a/profile.html
+++ b/profile.html
@@ -108,7 +108,7 @@
         function confirmSignOut() {
             if (confirm('Are you sure you want to sign out?')) {
                 alert('Signing out...');
-                window.location.href = 'login.html';
+                window.location.href = 'index.html';
             }
         }
     </script>
