added reservations and parking changes

--- a/home.html
+++ b/home.html
@@ -1,4 +1,28 @@
-<!DOCTYPE html>
+<style>
+        /* Pricing Details Styling */
+        .pricing-details {
+            text-align: right;
+        }
+
+        .base-rate {
+            font-size: 14px;
+            font-weight: 600;
+            color: #333;
+            margin-bottom: 2px;
+        }
+
+        .pricing-model {
+            font-size: 11px;
+            color: #666;
+            font-style: italic;
+        }
+
+        .price {
+            font-size: 14px;
+            font-weight: 600;
+            color: #333;
+        }
+    </style><!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -36,7 +60,10 @@
                             </div>
                         </div>
                         <div class="parking-info">
-                            <div class="price">₱15/hr</div>
+                            <div class="pricing-details">
+                                <div class="base-rate">₱50 base rate</div>
+                                <div class="pricing-model">All-day parking</div>
+                            </div>
                         </div>
                     </div>
                     
@@ -51,7 +78,10 @@
                             </div>
                         </div>
                         <div class="parking-info">
-                            <div class="price">₱25/hr</div>
+                            <div class="pricing-details">
+                                <div class="base-rate">₱30 base + ₱25/hr</div>
+                                <div class="pricing-model">Hourly after initial</div>
+                            </div>
                         </div>
                     </div>
 
@@ -90,15 +120,12 @@
             <div class="bottom-nav">
                 <a href="home.html" class="nav-item active">
                     <div class="nav-icon">Home</div>
-                    <div class="nav-label">Home</div>
                 </a>
                 <a href="reservations.html" class="nav-item">
                     <div class="nav-icon">Reservations</div>
-                    <div class="nav-label">Reservations</div>
                 </a>
                 <a href="profile.html" class="nav-item">
                     <div class="nav-icon">Profile</div>
-                    <div class="nav-label">Profile</div>
                 </a>
             </div>
         </div>
