--- a/profile.html
+++ b/profile.html
@@ -36,7 +36,7 @@
                         <div class="menu-arrow">></div>
                     </div>
                     
-                    <div class="menu-item" onclick="showFeature('Notifications')">
+                    <!-- <div class="menu-item" onclick="showFeature('Notifications')">
                         <div class="menu-icon">•</div>
                         <div class="menu-text">
                             <div class="menu-title">Notifications</div>
@@ -79,22 +79,19 @@
                             <div class="menu-subtitle">Log out of your account</div>
                         </div>
                         <div class="menu-arrow">></div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             
             <div class="bottom-nav">
                 <a href="home.html" class="nav-item">
                     <div class="nav-icon">Home</div>
-                    <div class="nav-label">Home</div>
                 </a>
                 <a href="reservations.html" class="nav-item">
                     <div class="nav-icon">Reservations</div>
-                    <div class="nav-label">Reservations</div>
                 </a>
                 <a href="profile.html" class="nav-item active">
                     <div class="nav-icon">Profile</div>
-                    <div class="nav-label">Profile</div>
                 </a>
             </div>
         </div>
