--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     <span>9:41</span>
                     <span>100%</span>
                 </div>
-                <h1>ParkEase</h1>
+                <h1>TESTRERERE</h1>
                 <p>Parking Made Easy</p>
             </div>
             
