--- a/profile.html
+++ b/profile.html
@@ -88,7 +88,7 @@
                     <div class="nav-icon">Home</div>
                 </a>
                 <a href="reservations.html" class="nav-item">
-                    <div class="nav-icon">Reservations</div>
+                    <div class="nav-icon">Parking</div>
                 </a>
                 <a href="profile.html" class="nav-item active">
                     <div class="nav-icon">Profile</div>
