--- a/dlsu-razon-details.html
+++ b/dlsu-razon-details.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ParkEase - DLSU Razon Parking</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/dlsu-razon-details.css">
 </head>
 <body>
     <div class="phone-container">
@@ -34,7 +35,6 @@
                     </div>
                 </div>
 
-
                 <div class="detail-section">
                     <div class="detail-title">Parking Information</div>
                     <div class="info-box">
@@ -59,40 +59,5 @@
             </div>
         </div>
     </div>
-
-    <style>
-        .unavailable-notice {
-            background: #f8f8f8;
-            border: 2px solid #ddd;
-            border-radius: 12px;
-            padding: 20px;
-            text-align: center;
-            margin-top: 20px;
-        }
-
-        .notice-icon {
-            font-size: 32px;
-            margin-bottom: 10px;
-        }
-
-        .notice-title {
-            font-size: 16px;
-            font-weight: 600;
-            color: #333;
-            margin-bottom: 5px;
-        }
-
-        .notice-subtitle {
-            font-size: 14px;
-            color: #666;
-            margin-bottom: 10px;
-        }
-
-        .notice-description {
-            font-size: 12px;
-            color: #666;
-            line-height: 1.4;
-        }
-    </style>
 </body>
 </html>
