--- a/owner-dashboard.html
+++ b/owner-dashboard.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ParkEase - Owner Dashboard</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/owner-dashboard.css">
 </head>
 <body>
     <div class="phone-container">
@@ -100,280 +101,6 @@
         </div>
     </div>
 
-    <script>
-        function manageParkingOperations() {
-            // Route to POS system for daily operations
-            window.location.href = 'owner-pos.html';
-        }
-
-        function setupParkingArea() {
-            // Route to setup wizard
-            window.location.href = 'owner-setup.html';
-        }
-
-        function signOut() {
-            if (confirm('Are you sure you want to sign out?')) {
-                window.location.href = 'index.html';
-            }
-        }
-
-        // Load parking area data (simulate)
-        function loadParkingData() {
-            // In real app, this would load from database
-            console.log('Loading parking area data...');
-        }
-
-        // Initialize dashboard
-        document.addEventListener('DOMContentLoaded', loadParkingData);
-    </script>
-
-    <style>
-        /* Welcome Section */
-        .welcome-section {
-            background: #333;
-            color: white;
-            padding: 20px;
-            border-radius: 12px;
-            margin-bottom: 25px;
-        }
-
-        .welcome-title {
-            font-size: 20px;
-            font-weight: 600;
-            margin-bottom: 5px;
-        }
-
-        .welcome-subtitle {
-            font-size: 14px;
-            opacity: 0.9;
-        }
-
-        /* Overview Section */
-        .overview-section {
-            margin-bottom: 30px;
-        }
-
-        .section-title {
-            font-size: 18px;
-            font-weight: 600;
-            color: #333;
-            margin-bottom: 15px;
-        }
-
-        .overview-grid {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 10px;
-        }
-
-        .overview-card {
-            background: white;
-            padding: 15px;
-            border-radius: 12px;
-            text-align: center;
-            border: 2px solid #ddd;
-        }
-
-        .overview-icon {
-            font-size: 20px;
-            margin-bottom: 8px;
-        }
-
-        .overview-value {
-            font-size: 18px;
-            font-weight: 700;
-            color: #333;
-            margin-bottom: 4px;
-        }
-
-        .overview-label {
-            font-size: 11px;
-            color: #666;
-            text-transform: uppercase;
-            font-weight: 600;
-        }
-
-        /* Main Actions Section */
-        .main-actions-section {
-            margin-bottom: 30px;
-        }
-
-        .action-card {
-            width: 100%;
-            background: white;
-            border: 2px solid #ddd;
-            border-radius: 12px;
-            padding: 20px;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            display: flex;
-            align-items: center;
-            text-align: left;
-            margin-bottom: 15px;
-        }
-
-        .action-card:hover {
-            border-color: #333;
-            background: #f5f5f5;
-            transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-        }
-
-        .setup-card:hover {
-            border-color: #2196F3;
-            background: #f8fbff;
-        }
-
-        .operations-card:hover {
-            border-color: #4CAF50;
-            background: #f8fff9;
-        }
-
-        .card-icon {
-            font-size: 28px;
-            margin-right: 15px;
-            width: 50px;
-            text-align: center;
-        }
-
-        .card-content {
-            flex: 1;
-        }
-
-        .card-title {
-            font-size: 16px;
-            font-weight: 600;
-            color: #333;
-            margin-bottom: 4px;
-        }
-
-        .card-subtitle {
-            font-size: 13px;
-            color: #666;
-            line-height: 1.4;
-        }
-
-        .card-arrow {
-            font-size: 18px;
-            color: #ccc;
-            margin-left: 10px;
-        }
-
-        /* Parking Area Section */
-        .parking-area-section {
-            margin-bottom: 30px;
-        }
-
-        .parking-area-card {
-            background: white;
-            border: 2px solid #ddd;
-            border-radius: 12px;
-            padding: 20px;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .parking-area-card:hover {
-            border-color: #333;
-            background: #f5f5f5;
-        }
-
-        .area-info {
-            flex: 1;
-        }
-
-        .area-name {
-            font-size: 16px;
-            font-weight: 600;
-            color: #333;
-            margin-bottom: 4px;
-        }
-
-        .area-location {
-            font-size: 13px;
-            color: #666;
-            margin-bottom: 8px;
-        }
-
-        .area-details {
-            display: flex;
-            gap: 12px;
-        }
-
-        .detail-item {
-            font-size: 12px;
-            color: #999;
-            background: #f5f5f5;
-            padding: 4px 8px;
-            border-radius: 12px;
-        }
-
-        .area-status {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 4px;
-        }
-
-        .status-indicator {
-            width: 12px;
-            height: 12px;
-            border-radius: 50%;
-            background: #28a745;
-        }
-
-        .status-indicator.active {
-            background: #28a745;
-        }
-
-        .status-text {
-            font-size: 11px;
-            color: #666;
-            font-weight: 600;
-        }
-
-        .area-arrow {
-            font-size: 16px;
-            color: #ccc;
-            margin-top: 4px;
-        }
-
-        /* Sign Out Section */
-        .signout-section {
-            margin-bottom: 20px;
-        }
-
-        .signout-btn {
-            width: 100%;
-            background: white;
-            border: 2px solid #ddd;
-            border-radius: 12px;
-            padding: 15px;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .signout-btn:hover {
-            border-color: #999;
-            background: #f5f5f5;
-        }
-
-        .signout-icon {
-            font-size: 18px;
-            margin-right: 10px;
-        }
-
-        .signout-text {
-            font-size: 14px;
-            font-weight: 600;
-            color: #666;
-        }
-    </style>
+    <script src="js/owner-dashboard.js"></script>
 </body>
 </html>
