--- a/profile.html
+++ b/profile.html
@@ -84,16 +84,20 @@
             </div>
             
             <div class="bottom-nav">
-                <a href="home.html" class="nav-item">
+                <a href="dlsu-home.html" class="nav-item">
                     <div class="nav-icon">Home</div>
                 </a>
-                <a href="reservations.html" class="nav-item">
-                    <div class="nav-icon">Parking</div>
+                <a href="public-parking.html" class="nav-item">
+                    <div class="nav-icon">Public</div>
+                </a>
+                <a href="private-parking.html" class="nav-item ">
+                    <div class="nav-icon">Private</div>
                 </a>
                 <a href="profile.html" class="nav-item active">
                     <div class="nav-icon">Profile</div>
                 </a>
             </div>
+        </div>
         </div>
     </div>
 
